Moving configs to an appropriate folder

--- a/marlin-2.1.1/mks-gen-14/platformio.ini
+++ b/marlin-2.1.1/mks-gen-14/platformio.ini
@@ -275,8 +275,12 @@ monitor_speed     = 250000
 monitor_eol       = LF
 monitor_echo      = yes
 monitor_filters   = colorize, time, send_on_enter
-upload_port = /dev/ttyUSB*
 
+
+[env:megaatmega2560]
+platform = atmelavr
+board = megaatmega2560
+# upload_port = /dev/ttyUSB*
 #
 # Just print the dependency tree
 #
