--- a/marlin-2.1.2.1/kp3s-stock/platformio.ini
+++ b/marlin-2.1.2.1/kp3s-stock/platformio.ini
@@ -13,7 +13,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mks_robin_nano_v1v2_maple
+default_envs = mks_robin_nano_v1v2
 include_dir  = Marlin
 extra_configs =
     ini/avr.ini
